# mpc_local_planner

./: .gitignore  README.md
mpc_local_planner/: .clang-format  CHANGELOG.rst  CMakeLists.txt  mpc_local_planner_plugin.xml  package.xml
mpc_local_planner/cfg/: mpc_collision.cfg  mpc_controller.cfg  mpc_footprint.cfg  mpc_reconfigure.cfg  rviz_test_mpc_optim.rviz  test_mpc_optim_node.yaml
mpc_local_planner/include/mpc_local_planner/: controller.h  mpc_local_planner_ros.h
mpc_local_planner/include/mpc_local_planner/optimal_control/: fd_collocation_se2.h  final_state_conditions_se2.h  finite_differences_grid_se2.h  finite_differences_variable_grid_se2.h  full_discretization_grid_base_se2.h  min_time_via_points_cost.h  quadratic_cost_se2.h  stage_inequality_se2.h  vector_vertex_se2.h
mpc_local_planner/include/mpc_local_planner/systems/: base_robot_se2.h  kinematic_bicycle_model.h  robot_dynamics_interface.h  simple_car.h  unicycle_robot.h
mpc_local_planner/include/mpc_local_planner/utils/: conversion.h  math_utils.h  publisher.h  time_series_se2.h
mpc_local_planner/launch/: test_mpc_optim_node.launch
mpc_local_planner/scripts/: plot_optimal_control_results.py
mpc_local_planner/src/: controller.cpp  mpc_local_planner_ros.cpp  test_mpc_optim_node.cpp
mpc_local_planner/src/optimal_control/: final_state_conditions_se2.cpp  finite_differences_grid_se2.cpp  finite_differences_variable_grid_se2.cpp  full_discretization_grid_base_se2.cpp  min_time_via_points_cost.cpp  quadratic_cost_se2.cpp  stage_inequality_se2.cpp
mpc_local_planner/src/utils/: conversion.cpp  publisher.cpp  time_series_se2.cpp
mpc_local_planner_examples/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mpc_local_planner_examples/cfg/: amcl_params.yaml  rviz_navigation.rviz  rviz_navigation_cc.rviz
mpc_local_planner_examples/cfg/carlike/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  mpc_local_planner_params.yaml
mpc_local_planner_examples/cfg/diff_drive/: costmap_common_params.yaml  costmap_converter_params.yaml  mpc_local_planner_params_minimum_time.yaml  mpc_local_planner_params_quadratic_form.yaml
mpc_local_planner_examples/launch/: carlike_minimum_time.launch  diff_drive_minimum_time.launch  diff_drive_minimum_time_costmap_conversion.launch  diff_drive_quadratic_form.launch
mpc_local_planner_examples/maps/: corridor.yaml  empty_box.yaml
mpc_local_planner_examples/stage/: corridor.world  empty_box.world  maze_carlike.world  maze_diff_drive.world  maze_omnidir.world
mpc_local_planner_examples/stage/robots/: carlike_robot.inc  diff_drive_robot.inc  diff_drive_robot_gps.inc  obstacle.inc  omnidir_robot.inc
mpc_local_planner_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
mpc_local_planner_msgs/msg/: OptimalControlResult.msg  StateFeedback.msg
